--- a/pages/rank/rank.wxml
+++ b/pages/rank/rank.wxml
@@ -18,7 +18,7 @@
         </view>
         <scroll-view scroll-y style="height: 736rpx;">
             <view class="rank-list">
-                <block wx:for="{{rank.list}}" wx:key="*this">
+                <block wx:for="{{rank.list}}" wx:key="{{index}}">
                     <view class="weui-flex rank-list-item">
                         <view class="w70">{{index+1}}.</view>
                         <view class="weui-flex__item">
