--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -22,7 +22,7 @@
   box-sizing: border-box;
 }
 
-.bindMobile-box{
+.bindMobile-box,.notice-box{
   position: absolute;
   top: 50%;
   background-color: #fff;
@@ -30,7 +30,7 @@
   right: 90rpx;
   margin-top: -216rpx;
 }
-.bindMobile-box-tt{
+.bindMobile-box-tt,.notice-box-tt{
   height: 65rpx;
   line-height: 65rpx;
   background-color: #ffb504;
@@ -72,7 +72,7 @@
   background-color: #ccc;
 }
 
-.bindMobile-box-form-btn{
+.bindMobile-box-form-btn,.notice-box-btn{
   font-size: 28rpx;
   margin-top: 40rpx;
   background-color: #ffb504;
@@ -84,6 +84,7 @@
   top: 30rpx;
   left: 30rpx;
   width: 60rpx;
+  z-index: 2;
 }
 .rotate{
   animation: rotate 4s linear infinite
@@ -105,4 +106,57 @@
   display: block;
   height: 100%;
   border-radius: 50%;
+}
+
+.ad-box{
+  margin-top: 20rpx;
+}
+.ad-tt{
+  text-align: center;
+  font-size: 32rpx;
+  color: #f9ca5a;
+}
+.ad-tt:before,.ad-tt:after{
+  content: '';
+  border-bottom: 1px solid #f9ca5a;
+  width: 50rpx;
+  vertical-align: middle;
+  display: inline-block;
+  margin: 0 20rpx;
+}
+.ad-list{
+  margin: 0 24rpx 20rpx ;
+  padding: 24rpx 0 14rpx;
+  border-radius: 10rpx;
+}
+.ad-list:after{
+  display: table;
+  content: '';
+  clear: both;
+}
+.ad-list-item{
+  float: left;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 12rpx;
+  margin-bottom: 10rpx;
+}
+.ad-list-item navigator{
+  display: block;
+  background-color: #fff;
+  padding: 10rpx 0;
+}
+.ad-list-item image{
+  width: 100%;
+  height: 70rpx;
+  vertical-align: middle;
+}
+
+.cprt{
+  text-align: center;
+  font-size: 24rpx;
+  color: #fff;
+  padding: 0 24rpx 16rpx;
 }
